tests/frontend/fail/array/bad_creates.act
constructor of A
interface constructor(int x, uint[2] y, bool[3] b, uint[3] u, bytes1[2][2] n1, int32[3][2] n2, uint foo)


constructor of B
interface constructor()

creates
  A a := create A([[1,2,3],[4,5]], 3, [1,2,false], [true,false],  [[1,2,3],[4,5]], [[1,2],[3,4]], x)
  uint[2][2] arr := [[0,0],[0,0]]
  int x := 0

behaviour f of B
interface f()

storage
  a => create A(2, [ [1,arr[100][0]], [3,4], [5,6] ])
